--- a/core.css
+++ b/core.css
@@ -566,47 +566,33 @@ a:focus {
 }
 /* Labels */
 .label {
-  font-weight: 600;
+  font-weight: 500;
   letter-spacing: 0.05em;
-  padding: .3em .6em .2em;
-  font-family: 'Hind Madurai', sans-serif;
-}
-.label-white {
-  background-color: rgba(255, 255, 255, 0.7);
-  color: #313a46 !important;
+  padding: .3em .6em .3em;
 }
 .label-default {
-  background-color: #00acc1;
+  background-color: #71b6f9;
 }
 .label-primary {
   background-color: #188ae2;
 }
 .label-success {
-  background-color: #26a69a;
+  background-color: #10c469;
 }
 .label-info {
-  background-color: #3ac9d6;
+  background-color: #35b8e0;
 }
 .label-warning {
   background-color: #f9c851;
 }
 .label-danger {
-  background-color: #f5707a;
+  background-color: #ff5b5b;
 }
 .label-purple {
-  background-color: #6b5fb5;
+  background-color: #5b69bc;
 }
 .label-pink {
-  background-color: #f06292;
-}
-.label-orange {
-  background-color: #ff9800;
-}
-.label-brown {
-  background-color: #8d6e63;
-}
-.label-teal {
-  background-color: #4bd396;
+  background-color: #ff8acc;
 }
 .label-inverse {
   background-color: #3b3e47;
@@ -614,10 +600,11 @@ a:focus {
 /* Badge */
 .badge {
   text-transform: uppercase;
-  padding: 4px 7px;
-  font-size: 11px;
+  font-weight: 500;
+  padding: 3px 5px;
+  font-size: 12px;
   margin-top: 1px;
-  background-color: #00acc1;
+  background-color: #71b6f9;
 }
 .badge-xs {
   font-size: 9px;
@@ -629,39 +616,26 @@ a:focus {
   -o-transform: translate(0, -2px);
   transform: translate(0, -2px);
 }
-.badge-white {
-  background-color: rgba(255, 255, 255, 0.7);
-  color: #313a46 !important;
-}
 .badge-primary {
   background-color: #188ae2;
 }
 .badge-success {
-  background-color: #26a69a;
+  background-color: #10c469;
 }
 .badge-info {
-  background-color: #3ac9d6;
+  background-color: #35b8e0;
 }
 .badge-warning {
   background-color: #f9c851;
 }
 .badge-danger {
-  background-color: #f5707a;
+  background-color: #ff5b5b;
 }
 .badge-purple {
-  background-color: #6b5fb5;
+  background-color: #5b69bc;
 }
 .badge-pink {
-  background-color: #f06292;
-}
-.badge-orange {
-  background-color: #ff9800;
-}
-.badge-brown {
-  background-color: #8d6e63;
-}
-.badge-teal {
-  background-color: #4bd396;
+  background-color: #ff8acc;
 }
 .badge-inverse {
   background-color: #3b3e47;
